--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -527,6 +527,11 @@
         text-align:center;
         border:1px solid #000;
     }
+    
+    .index-card-btn:hover{
+        background-color: #000;
+        color:#E8E8E8;
+    }
 
     /* .product-rect{
         width: calc(100% - 30px);
