--- a/src/pages/user/styles/OrderPro.scss
+++ b/src/pages/user/styles/OrderPro.scss
@@ -105,6 +105,7 @@
     border-color: #000;
     border-radius: 0px;
     margin-bottom: 10px;
+    margin-top: 20px;
     }
 
 .u-Bbtn > .btn-dark:hover,
