--- a/src/pages/Auction/style/AuctionProductList.scss
+++ b/src/pages/Auction/style/AuctionProductList.scss
@@ -39,6 +39,11 @@ time, mark, audio, video {
     text-align: center;
     line-height: 50px;
     font-size: 16px;
+    height: 50px;
+}
+
+.auctionOver{
+    background-color: #1D0AFF;
 }
 
 .auctionProduct_countdown span{
