--- a/src/pages/Auction/style/auctionDetail.scss
+++ b/src/pages/Auction/style/auctionDetail.scss
@@ -19,9 +19,9 @@ time, mark, audio, video {
  vertical-align: baseline;
 }
 
-/* *{
-    outline:1px red solid;
-}  */
+// *{
+//      outline:1px red solid;
+// }  
 
 body::-webkit-scrollbar {
     display: none;
@@ -157,23 +157,25 @@ body::-webkit-scrollbar {
 
 .auctionDetailPicture{
     margin-top: 6%;
-    width: 60%;
+    width: 90%;
+    height: 100%;
     max-height:60%;
+    max-width: 80%;
     overflow: hidden;
     display: flex;
     justify-content: center;
-}
-
-.auctionDetailPicture img{
-    object-fit: contain;
-    max-width: 100%;
-    max-height: 100%;
+    img{
+        object-fit: contain;
+        max-width: 100%;
+        max-height: 100%;
+        min-width: 60%;
+    }
 }
 
 .auctionDetailcurrentPriceInput{
     margin-top: 3%;
-    height: 10%;
-    width: 70%;
+    height: 5rem;
+    width: 80%;
     max-width: 300px;
     background-color: #000000;
     display: flex;
@@ -182,9 +184,9 @@ body::-webkit-scrollbar {
 }
 
 .auctionDetailcurrentPriceAboveInput{
-    font-size: 20px;
+    font-size: 1.2rem;
     color: #fff;
-    padding:5% 0 5% 0;
+    padding:4% 0 0 0;
     height: 50%;
     width: 100%;
     text-align: center;
@@ -204,6 +206,7 @@ body::-webkit-scrollbar {
     width: 100%;
     height: 100%;
     border:3px solid #000;
+    border-top:0px;
     text-align: center;
     align-self: center;
     font-size: 20px;
@@ -228,10 +231,22 @@ body::-webkit-scrollbar {
     .auctionDetailcountdown span{
         font-size: 2rem;
     }
+    .auctionDetailPicture{
+        height: 60%;
+    }
+    .auctionDetailrightContent{
+        margin-top: 5%;
+    }
 }
 
 
-@media screen and (max-width: 576px){
+@media screen and (max-width:650px){
+    .auctionDetailcurrentPriceAboveInput{
+        font-size: 1rem;
+    }
 
+    .auctionDetailcountdown span{
+        font-size: 1.8rem;
+    }
 
 }
