--- a/src/pages/user/styles/UserMyFav.scss
+++ b/src/pages/user/styles/UserMyFav.scss
@@ -31,18 +31,16 @@
 
 // ===== card =====
 .u-heart{
-  width: 2.5rem;
-  height: 2.5rem;
-  background-color: #000;
+  width: 30px;
+  height: 30px;
+  background-color: #A7A7A7;
   color: #81FC4D;
-  font-size: 1rem;
   border-right: 1px solid #fff;
 }
 
 .u-shopingcart {
-  width: 2.5rem;
-  height: 2.5rem;
-  background-color: #000;
+  width: 30px;
+  height: 30px;
+  background-color: #A7A7A7;
   color: #fff;
-  font-size: 1rem;
 }
