--- a/src/pages/user/styles/TicketDetail.scss
+++ b/src/pages/user/styles/TicketDetail.scss
@@ -6,7 +6,7 @@
 .u-tic2 {
     width: 100%;
     height: 150px;
-    border: 2px solid #000;
+    border: 2px solid rgb(168, 165, 165);
     line-height: 50px;
 }
 
