--- a/src/pages/artist/Artist.scss
+++ b/src/pages/artist/Artist.scss
@@ -53,7 +53,7 @@
     .art-area h5{
         line-height:30px;
         letter-spacing: 1px;
-        font-size:3.5vh;
+        font-size:1rem;
         color: #000;
     }
     
@@ -137,7 +137,7 @@
    }
 
    .art-hl{
-       width:35% ;
+       width:55% ;
        height: 50px;
        background: #81FC4D;
        position: absolute;
@@ -146,7 +146,7 @@
         z-index: 1;
    }
    .art-hl2{
-       width:25% ;
+       width:45% ;
        height: 50px;
        background: #81FC4D;
        position: absolute;
