--- a/src/pages/product/style/Product.css
+++ b/src/pages/product/style/Product.css
@@ -201,7 +201,7 @@
     top: 41%;
     left: 62.5%;
 }
-/* -------------第二頁 */
+/* -------------第二 */
 .pro-outside2 {
     background-color: black;
     width: calc(100vw - 70px);
