--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -9,12 +9,12 @@
     }
     
     @font-face {
-    font-family: notoSansTC-md-md;
-    src:url(../../style/font/notoSansTC-md-Medium.otf);
+    font-family: notoSansTC-md;
+    src:url(../../style/font/notoSansTC-Medium.otf);
     }
 
     .notoSansTC-md-md{
-        font-family: notoSansTC-md-md;
+        font-family: notoSansTC-md;
     }
 
     .engravers{
