--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -210,7 +210,7 @@
     .artist-title-tc span {
         font-size: 1.5vw;
         padding-left: 9em;
-        font-family: notoSansTC-md-md;
+        font-family: notoSansTC-md;
         color: #81FC4D;
         position: relative;
     }
@@ -357,7 +357,7 @@
     .event-title-tc span {
         font-size: 1.5vw;
         padding-left: 9em;
-        font-family: notoSansTC-md-md;
+        font-family: notoSansTC-md;
         color: #000;
         position: relative;
     }
@@ -380,7 +380,7 @@
     .event-marquee h1{
         letter-spacing: 4px;
         font-size: 3vw;
-        font-family: notoSansTC-md-md;
+        font-family: notoSansTC-md;
 
     }
 
@@ -464,7 +464,7 @@
     .product-title-tc span {
         font-size: 1.5vw;
         padding-left: 9em;
-        font-family: notoSansTC-md-md;
+        font-family: notoSansTC-md;
         color: #000;
         position: relative;
     }
