--- a/src/pages/product/style/ProductDetail.css
+++ b/src/pages/product/style/ProductDetail.css
@@ -35,17 +35,20 @@ font-face {
 }
 
 /* ------------slick-------- */
-.proDe-slickPic{
-    width: 300px;
-}
 
-.proDe-slickPic img{
-    width: 10%;
+.proDe-wall img{
+    height: 80vh;
 }
 .carousel-root{
     height: 100%;
 }
-.thumbs {
+.thumb {
+    width: 100%;
+    height: 100px;
+}
+.thumb img{
+    width: 100%;
+    height: 100%;
 }
 /* -------right hand side------ */
 .proDe-rightSideBox{
