List Location Value Return Correct

--- a/src/pages/event/style/eventList.scss
+++ b/src/pages/event/style/eventList.scss
@@ -87,6 +87,11 @@ $egreylt: #E8E8E8;
   border: 0px;
 }
 
+.ed-select-date {
+  background: transparent;
+  border: 0px;
+}
+
 .ed-list-btn{
     height: 52px;
     border: 2px solid black;
