index card/leaflet CC

--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -503,6 +503,10 @@
     .product-card{
         position: relative;
         overflow: hidden;
+
+        img{
+            width: 100%;
+        }
     }
 
     .product-card-wrap{
