--- a/src/pages/map/map.scss
+++ b/src/pages/map/map.scss
@@ -81,6 +81,7 @@
         color: #E8E8E8;
         font-weight: normal;
         border: 2px solid #E8E8E8;
+        background-color: #000;
     }
 
     .map-select{
@@ -94,60 +95,7 @@
         padding-right: 2rem;
     }
     
-
-    // 搜尋
-
-
-    .map-search input[type="text"] {
-        height: 60px;
-        font-size: 1rem;
-        display: inline-block;
-        font-family: "Lato";
-        border: none;
-        outline: none;
-        color: #E8E8E8;
-        padding: 3px;
-        padding-right: 60px;
-        width: 0px;
-        position: absolute;
-        top: 0;
-        right: 0;
-        background: none;
-        z-index: 3;
-        transition: width .4s cubic-bezier(0.000, 0.795, 0.000, 1.000);
-        cursor: pointer;
-      }
       
-      .map-search input[type="text"]:focus:hover {
-        border-bottom: 1px solid #E8E8E8;
-      }
-      
-      .map-search input[type="text"]:focus {
-        width: 25%;
-        z-index: 1;
-        cursor: text;
-      }
-      .map-search input[type="submit"] {
-        height: 67px;
-        width: 63px;
-        display: inline-block;
-        color:#81FC4D;
-        float: right;
-        background: url('../../pics/arr-left.svg') no-repeat;
-        text-indent: -10000px;
-        border: none;
-        position: absolute;
-        top: 0;
-        right: 0;
-        z-index: 2;
-        cursor: pointer;
-        opacity: 0.4;
-        transition: opacity .4s ease;
-      }
-      
-      .map-search input[type="submit"]:hover {
-        opacity: 0.8;
-      }
 
       // ? map card 
 
@@ -197,7 +145,7 @@
       .map-select-box-dk{
         height: 5vh;
         font-size: 1rem;
-        color: #000000;
+        color: #000;
         font-weight: normal;
         border: 2px solid #000000;
     }
