--- a/src/pages/user/styles/OrderProDetail.scss
+++ b/src/pages/user/styles/OrderProDetail.scss
@@ -126,8 +126,8 @@
     text-align: center;
     line-height: 55px;
     font-size: 16px;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    padding-bottom: 30px;
+    margin-top: 40px;
     margin-left: 30vw;
     font-family: NotoSansTC-Medium;
     font-size: 18px;
