--- a/src/pages/user/styles/Ticket.scss
+++ b/src/pages/user/styles/Ticket.scss
@@ -4,6 +4,7 @@
     border: 2px solid #000;
     border-top: 25px solid #000;
     margin-top: 50px;
+    padding-bottom: 30px;
     position: relative;
 }
 
