--- a/src/pages/user/styles/OrderPro.scss
+++ b/src/pages/user/styles/OrderPro.scss
@@ -59,7 +59,7 @@
 .u-table {
   margin-top: 20px;
   width: 100%;
-  height: 230px;
+  // height: 230px;
   border: 2px solid #707070;
   font-size: 16px;
   font-family: NotoSansTC-Medium;
