--- a/src/pages/product/style/ProductList.css
+++ b/src/pages/product/style/ProductList.css
@@ -93,7 +93,6 @@
 }
 .prolist-full2{
     background-color: #e8e8e8;
-    height: 2000px;
     width: calc(100vw - 70px);
 }
 .prolist-row{
@@ -240,6 +239,8 @@
 
     border:2px solid gray;
     border-bottom: 0 ;
+    height: 250px;
+    overflow: hidden;
 }
 
 .prolist-imgBox img{
