--- a/src/pages/cart/styles/cart-product.scss
+++ b/src/pages/cart/styles/cart-product.scss
@@ -107,6 +107,17 @@
   border: 1px solid black;
   text-align: center;
   line-height: 50px;
+  input {
+    width: 50px;
+    height: 50px;
+    border: none;
+    padding-left: 15px;
+    background-color: transparent;
+    &:focus {
+      outline: none;
+      // border: 1px solid #1d0aff;
+    }
+  }
 }
 .c-checkout {
   border-top: 2px solid black;
@@ -184,3 +195,31 @@
     background: black;
   }
 }
+
+// 暫時
+
+
+.c-fakeplist {
+  p {
+    color: white;
+  }
+}
+
+.c-fakeplist {
+  button {
+    font-size: 0.8rem;
+    padding: 0.2rem;
+    margin: 0.1rem;
+    border: 0;
+    background-color: black;
+    width: 100%;
+    cursor: pointer;
+  }
+}
+
+.c-empty {
+  text-align: center;
+  font-size: 1.5rem;
+  padding: 30px 0;
+}
+
