--- a/src/pages/event/style/eventDetail.scss
+++ b/src/pages/event/style/eventDetail.scss
@@ -74,6 +74,7 @@ $egreylt: #E8E8E8;
 }
 
 .ed-commu-btn button{
+    text-decoration: none;
     width: 100%;
     height: 50px;
     font-size: 1.3rem;
@@ -82,6 +83,9 @@ $egreylt: #E8E8E8;
     background-color: transparent;
     border: 2px solid white;
 
+}
+.ed-commu-btn button:hover{
+    text-decoration: none;
 }
 
 .ed-detail-btn{
