--- a/src/pages/user/styles/Add.scss
+++ b/src/pages/user/styles/Add.scss
@@ -143,19 +143,12 @@
 }
 
 //----- icons -----
-.u-gf {
+.u-FB {
   width: 100%;
-  height: 95px;
+  height: 70px;
   border-bottom: 2px solid #000;
-  font-size: 55px;
-}
-
-.u-g {
-  padding-right: 20px;
-}
-
-.u-f {
-  padding-left: 20px;
+  font-size: 50px;
+  margin-top: 20px;
 }
 
 //----- input 樣式 -----
