--- a/src/pages/Auction/style/auction.scss
+++ b/src/pages/Auction/style/auction.scss
@@ -108,7 +108,7 @@ time, mark, audio, video {
     background-repeat: no-repeat;
     background-position-x: 100%;
     background-position-y: 50%;
-    width: 100px;
+    width: 182px;
     border: 0px ;
     padding-right: 2rem;
   }
@@ -125,10 +125,10 @@ time, mark, audio, video {
 
 .auctionArrangement{
     display: inline-block;
-    width: 74px;
+    width: 60px;
     height: 42px;
     margin:29px 0 0 0;
-    font-size: 18px;
+    font-size: 1rem;
     text-align: center;
     line-height: 42px;
     border:2px solid #000;
@@ -136,11 +136,11 @@ time, mark, audio, video {
 
 .auctionArrangementInput{
     display: inline-block;
-    width: 117px;
+    width: 195px;
     height: 42px;
-    font-size: 18px;
+    font-size: 1rem;
     line-height: 42px;
-    padding: 0 0 0 10px;
+    padding: 0 0 0 5px;
     border-top:2px solid #000;
     border-right:2px solid #000;
     border-bottom:2px solid #000;
