--- a/src/pages/event/style/eventDetail.scss
+++ b/src/pages/event/style/eventDetail.scss
@@ -205,6 +205,9 @@ $egreylt: #E8E8E8;
             border: 0px;
             margin: 0px;
         }
+        .ed-submit-btn:hover{
+            background-color: #1f12b3 ;
+        }
     }
 
     
