--- a/src/pages/cart/styles/cart-finish.scss
+++ b/src/pages/cart/styles/cart-finish.scss
@@ -1,3 +1,10 @@
+.c-bg2 {
+  font-family: 'Noto Sans TC Medium', sans-serif;
+  width: 100%;
+  height: 100%;
+  background-color: #e8e8e8;
+}
+
 .c-thank {
   text-align: center;
   margin-bottom: 70px;
