--- a/src/pages/event/style/eventDetail.scss
+++ b/src/pages/event/style/eventDetail.scss
@@ -116,6 +116,14 @@ $egreylt: #E8E8E8;
 
 }
 
+.e-fb-area{
+    border-top: 1px solid white;
+}
+
+.e-fb-cmt{
+    background-color: #E8E8E8;
+}
+
 .ed-comment{
     background-color: transparent;
     border: 2px solid white;
