--- a/src/pages/event/style/WorkshopUpload.scss
+++ b/src/pages/event/style/WorkshopUpload.scss
@@ -142,6 +142,19 @@ $egreylt: #E8E8E8;
     font-weight: 500;
 }
 
+.eu-send-del2{
+    background-color: #d44035;
+    border: 0px solid #A7A7A7;
+    color: white;
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+.eu-send-del2:hover{
+    background-color: #c44d45;
+    border: 0px solid #A7A7A7;
+}
+
 .eu-send-del:hover{
     background-color: #A7A7A7;
     border: 2px solid #A7A7A7;
@@ -174,6 +187,10 @@ $egreylt: #E8E8E8;
 #eventModal{
     span{
         color: #d44035;
+    }
+
+    button{
+        border-radius: 0px;
     }
     .modal-content{
         border-radius: 0px;
