--- a/src/pages/product/style/ProductDetail.css
+++ b/src/pages/product/style/ProductDetail.css
@@ -65,6 +65,10 @@ font-face {
     width: 100%;
     height: 100%;
 }
+
+.detailTry{
+    display: none;
+}
 /* -------right hand side------ */
 .proDe-rightSideBox{
     background-color: black;
