Update List Filter

--- a/src/pages/event/style/eventDetail.scss
+++ b/src/pages/event/style/eventDetail.scss
@@ -86,6 +86,8 @@ $egreylt: #E8E8E8;
 }
 .ed-commu-btn button:hover{
     text-decoration: none;
+    color: black;
+    background-color: white;
 }
 
 .ed-detail-btn{
@@ -130,6 +132,12 @@ $egreylt: #E8E8E8;
     color: white;
     font-size: 1rem;
     font-weight: 500;
+
+}
+
+.ed-comment:hover{
+    background-color: white;
+    color: black;
 
 }
 
