LeaftLet need fix

--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -569,9 +569,9 @@
     }
 
     .index-card-btn{
-        height: 5vh;
         text-align:center;
         border:1px solid #000;
+        margin:auto;
     }
     
     .index-card-btn:hover{
