EVENT CRUD DONE

--- a/src/pages/event/style/eventList.scss
+++ b/src/pages/event/style/eventList.scss
@@ -153,3 +153,11 @@ $egreylt: #E8E8E8;
         color: white;
     }
 }
+
+.ed-pagenum{
+    color: #8F9CA2;
+}
+
+.ed-pagenum:hover{
+    color: #8F9CA2;
+}
