--- a/src/pages/event/style/eventList.scss
+++ b/src/pages/event/style/eventList.scss
@@ -93,11 +93,14 @@ $egreylt: #E8E8E8;
 }
 
 .ed-list-btn{
+    cursor: pointer;
+    text-align: center;
     height: 52px;
     border: 2px solid black;
     background-color: black;
     color: white;
     font-size: 1.5rem;
+    padding-top: 6px;
 }
 
 .ed-list-btn2{
