--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -13,7 +13,7 @@
     src:url(../../style/font/NotoSansTC-Medium.otf);
     }
 
-    .notoSansTC-md-md{
+    .notoSansTC-md{
         font-family: notoSansTC-md;
     }
 
@@ -538,9 +538,37 @@
 
     .index-card-rect{
         width: 100%;
-        height: 1vh;
+        height: 50px;
         background: #000;
+        -moz-transform:translateY(-0.5em);
+        -webkit-transform:translateY(-0.5em);
+        -o-transform:translateY(-0.5em);
+        -ms-transform:translateY(-0.5em);
+        transform:translateY(-0.5em);
+
+        div{
+            color:#81FC4D;
+            margin:auto;
+            font-family: notoSansTC-md;
+            letter-spacing:3px;
+        }
+
     }
+
+
+    // .index-card-rect:hover{
+    //     width: 100%;
+    //     height: 60px;
+    //     background: #000;
+    //     -moz-transform:translateY(-0.75em);
+    //     -webkit-transform:translateY(-0.75em);
+    //     -o-transform:translateY(-0.75em);
+    //     -ms-transform:translateY(-0.75em);
+    //     transform:translateY(-0.75em);
+    // }
+    // div{
+    //     display:block;
+    // }
 
     .product-card{
         position: relative;
