Tetris Start and Order pro fix

--- a/src/pages/event/style/event.scss
+++ b/src/pages/event/style/event.scss
@@ -807,6 +807,12 @@ $egreylt: #E8E8E8;
         }
 
 
+.tetris-area{
+    border-top: 4px solid white;
+    background-color: black;
+    height: 100vh;
+}
+
 
 // !!!!!This is Where RWD Start!!!!!
 // @media screen and (max-width:576px) {}
