--- a/src/pages/product/style/ProductDetail.css
+++ b/src/pages/product/style/ProductDetail.css
@@ -236,6 +236,7 @@ color: white;
     text-align: center;
     margin-top: 8px;
     font-size: 1.3rem;
+    text-align: center;
 }
 .proDe-addToCart{
     margin-right: 10%;
