--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -535,6 +535,7 @@
 
 
 /* ----------product 卡片區 -----------*/
+    
 
     .index-card-rect{
         width: 100%;
@@ -547,12 +548,27 @@
         transform:translateY(-0.5em);
 
         div{
-            color:#81FC4D;
+            color:#E8E8E8;
             margin:auto;
             font-family: notoSansTC-md;
             letter-spacing:3px;
         }
 
+        a{
+            color:#E8E8E8;
+        }
+        
+        
+        a:hover{
+            color:#81FC4D;
+            text-decoration: none;
+        }
+
+        
+        
+        .index-heart:hover{
+            color:#81FC4D;
+        }
     }
 
 
