--- a/src/pages/user/styles/OrderProDetail.scss
+++ b/src/pages/user/styles/OrderProDetail.scss
@@ -61,6 +61,11 @@
     margin-left: 12px;
 }
 
+.u-proImg > img {
+    width: 100%;
+    height: 100%;
+}
+
 .u-proText, .u-proSize, .u-proQty, .u-proTotalPrice {
     margin-top: 30px;
     font-size: 16px;
