--- a/src/pages/user/styles/Ticket.scss
+++ b/src/pages/user/styles/Ticket.scss
@@ -51,6 +51,11 @@
       margin-left: 25px;
   }
 
+  .u-ticImg > img {
+    width: 100%;
+    height: 100%;
+  }
+
   .u-ticMsg{
       margin-top: 25px;
       margin-left: 25px;
