--- a/src/pages/Auction/style/userAuction.scss
+++ b/src/pages/Auction/style/userAuction.scss
@@ -20,7 +20,13 @@
     height: 175px;
     margin: 25px 0 0 25px;
     border:1px solid #000;
+    img{
+        width: 100%;
+        height: 100%;
+    }
 }
+
+
 
 .uAuc-productState{
     margin: 0 0 0 25px;
@@ -51,6 +57,7 @@
     background-color: #000;
     color:#fff;
     border: 0px;
+    text-align: center;
 }
 
 
