--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -540,7 +540,10 @@
     .index-card-rect{
         width: 100%;
         height: 50px;
+        line-height: 50px;
+        text-align: center;
         background: #000;
+        color:#81FC4D;
         -moz-transform:translateY(-0.5em);
         -webkit-transform:translateY(-0.5em);
         -o-transform:translateY(-0.5em);
@@ -704,6 +707,12 @@
     .auction-card img{
         width: 100%;
         object-fit: cover;
+    }
+
+    .auc-time{
+        text-align: center;
+        color:#81FC4D;
+        margin:0 auto;
     }
     
     /* ----------Ending -----------*/
