--- a/src/pages/user/styles/UserMyFav.scss
+++ b/src/pages/user/styles/UserMyFav.scss
@@ -33,14 +33,13 @@
 .u-heart{
   width: 30px;
   height: 30px;
-  background-color: #A7A7A7;
+  // background-color: #A7A7A7;
   color: #81FC4D;
-  border-right: 1px solid #fff;
 }
 
 .u-shopingcart {
   width: 30px;
   height: 30px;
-  background-color: #A7A7A7;
+  // background-color: #A7A7A7;
   color: #fff;
 }
