EXHI Weather without CSS

--- a/src/pages/event/style/eventDetail.scss
+++ b/src/pages/event/style/eventDetail.scss
@@ -90,6 +90,10 @@ $egreylt: #E8E8E8;
     background-color: white;
 }
 
+.ed-weather{
+    color: white;
+}
+
 .ed-detail-btn{
     background-color: transparent;
     border: 0px;
