--- a/src/pages/event/style/eventDetail.scss
+++ b/src/pages/event/style/eventDetail.scss
@@ -92,6 +92,16 @@ $egreylt: #E8E8E8;
 
 .ed-weather{
     color: white;
+    div{
+        h6{
+            display: inline;
+            font-size: 1.4rem;
+            font-weight: 500;
+        }
+        p{
+            display: inline;
+        }
+    }
 }
 
 .ed-detail-btn{
