--- a/src/pages/product/style/ProductDetail.css
+++ b/src/pages/product/style/ProductDetail.css
@@ -130,7 +130,7 @@ font-face {
     margin-top: 1.5%;
 }
 .proDe-scoresAndWrite {
-    margin-top: 7px;
+    margin-top: 27px;
     margin-left: 20px;  
     font-family:notoSansTC-Medium;
     color: #6e6e6e;
@@ -144,6 +144,7 @@ font-face {
     width: 100%;
     height: 50px;
     background-color: black;
+    margin-top: 10px;
 }
 .proDe-productPricee p{
 font-family: notoSansTC-Medium;
@@ -292,8 +293,8 @@ color: white;
 }
 .proDe-commentsLeft{
     width: 40%;
-    height: 130px;
-    margin-top: 28px;
+    height: 100px;
+    margin-top: 40px;
 }
 .proDe-commentsWord1{
     color: white;
@@ -309,15 +310,19 @@ color: white;
 }
 .proDe-pushLeft{
     margin-left: 30px;
+    margin-top: -7px;
 }
 .proDe-underStarWord{
     font-size: 1rem;
     color: #6e6e6e;
+    justify-content: flex-end;
+    margin-right: 15px;
+
 }
 .proDe-commentsRight{
     width: 52%;
-    height: 130px;
-    margin-top:28px;
+    height: 100px;
+    margin-top:40px;
 }
 @media (min-width: 1440px){
     .proDe-commentsRight{
